--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "./dist/index",
     "types": "./dist/index",
     "scripts": {
-        "prepublishOnly": "rimraf ./dist && tsc",
+        "prepublishOnly": "tsc",
         "test": "rimraf ./dist && tsc && ENV=testing mocha",
         "tsc:build": "rimraf ./dist && tsc",
         "tsc:build:watch": "rimraf ./dist && tsc -w"
